--- a/index.html
+++ b/index.html
@@ -7,37 +7,49 @@
  <link rel="stylesheet" href="style.css">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body>
  <div id="loader-wrapper">
     <h1>MJDEV</h1>
     <div class="loader"></div>
   </div>
-  <nav>
-     <div data-aos="zoom-out-down" class="logo"><i class="fas fa-code"></i> MJDEV</div>
-       <input type="checkbox" id="toggle">
-       <label for="toggle">
-            <div class="circle">
-                <svg class="sun" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z" />
-                </svg>
-                <svg class="moon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                   <path stroke-linecap="round" stroke-linejoin="round" d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z" />
-                </svg>
-            </div>
-        </label>
-    <ul data-aos="zoom-out-down" id="menuList">
-      <li><a href="#" onclick="closeMenu()">HOME</a></li>
-      <li><a href="#about" onclick="closeMenu()">ABOUT</a></li>
-      <li><a href="#skills" onclick="closeMenu()">SKILLS</a></li>
-      <li><a href="#contact" onclick="closeMenu()">CONTACT</a></li> 
+  <nav class="navbar" id="navbar">
+    <div class="top-row">
+            <input type="checkbox" id="toggle">
+    <label for="toggle">
+         <div class="circle">
+             <svg class="sun" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                 <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z" />
+             </svg>
+             <svg class="moon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z" />
+             </svg>
+         </div>
+     </label>
+      <div class="logo"><i class="fas fa-code"></i> MJDEV</div>
+      <div class="menu-icon" id="menuToggle">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <ul >
+      <li><a href="#">HOME</a></li>
+      <li><a href="#about">ABOUT</a></li>
+      <li><a href="#">SKILLS</a></li>
+      <li><a href="#">PROJECT</a></li>
     </ul>
-     
-       <div class="menu-icon">
-         <i class="fas fa-bars"  id="menuIcon" onclick="toggleMenu()"></i>
-       </div>
+    </div>
+
+    <ul class="nav-links">
+      <li><a href="#">HOME</a></li>
+      <li><a href="#about">ABOUT</a></li>
+      <li><a href="#">SKILLS</a></li>
+      <li><a href="#">PROJECT</a></li>
+    </ul>
+
   </nav>
+   
 
   <div class="container">
           <div class="intro">
@@ -158,21 +170,15 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="script.js"></script>
   <script>
-      let menuList = document.getElementById("menuList");
-    let menuIcon = document.getElementById("menuIcon"); 
+   
+   const menuToggle = document.getElementById('menuToggle');
+const navbar = document.getElementById('navbar');
 
-    menuList.style.maxHeight = "0px"; 
-    function toggleMenu(){
-        if (menuList.style.maxHeight === "0px"){ 
-            menuList.style.maxHeight = "900px"; 
-            menuIcon.classList.remove("fa-bars"); 
-            menuIcon.classList.add("fa-times"); 
-        } else {
-            menuList.style.maxHeight = "0px"; 
-            menuIcon.classList.remove("fa-times");
-            menuIcon.classList.add("fa-bars");
-        }
-    }
+menuToggle.addEventListener('click', () => {
+  navbar.classList.toggle('open');
+  menuToggle.classList.toggle('open'); // add class to trigger animation
+});
+
 
  window.addEventListener('load', function () {
   const loaderWrapper = document.getElementById('loader-wrapper');
