--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <input type="checkbox" id="toggle">
     <label for="toggle">
          <div class="circle">
-             <svg class="sun" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+             <svg  class="sun" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                  <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z" />
              </svg>
              <svg class="moon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
@@ -27,7 +27,7 @@
              </svg>
          </div>
      </label>
-      <div class="logo"><i class="fas fa-code"></i> MJDEV</div>
+      <div class="logo"><i id="color" class="fas fa-code"></i> MJDEV</div>
       <div class="menu-icon" id="menuToggle">
         <span></span>
         <span></span>
@@ -36,16 +36,16 @@
       <ul >
       <li><a href="#">HOME</a></li>
       <li><a href="#about">ABOUT</a></li>
-      <li><a href="#">SKILLS</a></li>
-      <li><a href="#">PROJECT</a></li>
+      <li><a href="#skills">SKILLS</a></li>
+      <li><a href="#contact">CONTACT</a></li>
     </ul>
     </div>
 
     <ul class="nav-links">
       <li><a href="#">HOME</a></li>
       <li><a href="#about">ABOUT</a></li>
-      <li><a href="#">SKILLS</a></li>
-      <li><a href="#">PROJECT</a></li>
+      <li><a href="#skills">SKILLS</a></li>
+      <li><a href="#contact">CONTACT</a></li>
     </ul>
 
   </nav>
@@ -66,7 +66,7 @@
               </div>
           </div>
           <div data-aos="fade-right" class="img-box">
-              <img src="02894799-f430-4655-8ee4-4df6c72f7f89.jpg" alt="Profile Picture" />
+              <img class="no-drag no-copy" alt="Protected Image" src="02894799-f430-4655-8ee4-4df6c72f7f89.jpg" />
                <div class="social-icons">
                   <a href="https://www.facebook.com/villones.jervin"><i class="fab fa-facebook"></i></a>
                   <a href="https://www.instagram.com/villones_jervs/?hl=en"><i class="fab fa-instagram"></i></a>
@@ -87,15 +87,15 @@
             <div class="section-title">WHAT CAN I<span>PROVIDE?</span></div>
             <div class="services">
             <div data-aos="fade-left" class="card">
-              <img src="https://cdn-icons-png.flaticon.com/512/1006/1006361.png" alt="Web Design">
+              <img class="no-drag no-copy" alt="Protected Image" src="https://cdn-icons-png.flaticon.com/512/1006/1006361.png" alt="Web Design">
            <h3>WEB DESIGN</h3>
             </div>
             <div data-aos="fade-up-right" class="card">
-            <img src="https://cdn-icons-png.flaticon.com/512/2415/2415466.png" alt="Friendly Web">
+            <img class="no-drag no-copy" alt="Protected Image" src="https://cdn-icons-png.flaticon.com/512/2415/2415466.png" alt="Friendly Web">
             <h3>FRIENDLY WEB</h3>
              </div>
             <div  data-aos="fade-up-left" class="card">
-              <img src="https://cdn-icons-png.flaticon.com/512/906/906175.png" alt="Mobile Responsive">
+              <img class="no-drag no-copy" alt="Protected Image" src="https://cdn-icons-png.flaticon.com/512/906/906175.png" alt="Mobile Responsive">
              <h3>MOBILE RESPONSIVE</h3>
              </div>
               </div>
@@ -114,7 +114,7 @@
      <div class="about-profile">
           <div data-aos="fade-left" class="imgver">
              <div class="img-boxing">
-               <img src="02894799-f430-4655-8ee4-4df6c72f7f89.jpg" alt="">
+               <img class="no-drag no-copy" alt="Protected Image" src="02894799-f430-4655-8ee4-4df6c72f7f89.jpg" alt="">
              </div>
           </div>
           <div data-aos="fade-right" class="about-text">
@@ -137,10 +137,10 @@
         <div class="center">
             <div class="lange">Master Language</div>
             <div class="imagess">
-                 <img data-aos="fade-right" src="Social free icons designed by popcornarts.jpg" alt="">
-                 <img data-aos="fade-up" src="Iconos gratuitos de Html diseñados por Freepik.jpg" alt="">
-                 <img  data-aos="fade-down" src="The First Step to Mastering JavaScript (JS).jpg" alt="">
-                 <img data-aos="fade-up-left" src="Figma logo vector in _EPS, .AI, .SVG free download - Brandlogos.net" alt="">
+                 <img class="no-drag no-copy" alt="Protected Image" data-aos="fade-right" src="Social free icons designed by popcornarts.jpg" alt="">
+                 <img class="no-drag no-copy" alt="Protected Image" data-aos="fade-up" src="Iconos gratuitos de Html diseñados por Freepik.jpg" alt="">
+                 <img class="no-drag no-copy" alt="Protected Image" data-aos="fade-down" src="The First Step to Mastering JavaScript (JS).jpg" alt="">
+                 <img class="no-drag no-copy" alt="Protected Image" data-aos="fade-up-left" src="Figma logo vector in _EPS, .AI, .SVG free download - Brandlogos.net" alt="">
             </div>
          </div>
      </div>
@@ -151,7 +151,7 @@
         </div>
         <div class="images-con">
                <div class="contact-img">
-                  <img style="align-items: center;" src="Web Development Illustration.jpg" alt="">
+                  <img class="no-drag no-copy" alt="Protected Image" style="align-items: center;" src="Web Development Illustration.jpg" alt="">
               </div>
         </div>
         
@@ -171,12 +171,21 @@
   <script src="script.js"></script>
   <script>
    
-   const menuToggle = document.getElementById('menuToggle');
+const menuToggle = document.getElementById('menuToggle');
 const navbar = document.getElementById('navbar');
+const navLinks = document.querySelectorAll('.nav-links a');
 
 menuToggle.addEventListener('click', () => {
   navbar.classList.toggle('open');
-  menuToggle.classList.toggle('open'); // add class to trigger animation
+  menuToggle.classList.toggle('open');
+});
+
+// Close menu when any nav link is clicked
+navLinks.forEach(link => {
+  link.addEventListener('click', () => {
+    navbar.classList.remove('open');
+    menuToggle.classList.remove('open');
+  });
 });
 
 
@@ -192,6 +201,14 @@ menuToggle.addEventListener('click', () => {
 });
 
   </script>
+
+  <script>
+  // Disable right-click on the whole page
+  document.addEventListener('contextmenu', function(e) {
+    e.preventDefault();
+  });
+</script>
+
 
 
 
