--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
          </div>
     </div>
   </div>
- <hr style="border: none; height: 3px; display:flex; align-items:center; background-color: rgb(255, 165, 0); width: 100%; justify-content: center;">
+ 
     <!--!about -->
   <header data-aos="zoom-out-down" id="about" class="header-about">
       <div >ABO<span>UT</span></div>
@@ -110,14 +110,13 @@
 
   </div>
    
-  <div class="About ">
+  <div class="About">
      <div class="about-profile">
-          <div data-aos="fade-left" class="imgver">
-             <div class="img-boxing">
+             <div data-aos="fade-left"  class="img-boxing">
                <img class="no-drag no-copy" alt="Protected Image" src="02894799-f430-4655-8ee4-4df6c72f7f89.jpg" alt="">
              </div>
-          </div>
-          <div data-aos="fade-right" class="about-text">
+
+              <div data-aos="fade-right" class="about-text">
                <h1>WHO I AM?</h1>
                <div>
                    I am Jervin, a dedicated student with a strong passion for technology and web development. My goal is to become a successful web developer in the Philippines, creating websites and applications that are both useful and innovative. I am committed to learning and improving my skills so I can contribute to the growing tech industry in the country. With hard work and determination, I believe I can achieve my dreams and make a positive impact through web development.
@@ -125,7 +124,7 @@
            </div>
       </div>
   </div>
-  <hr style="border: none; height: 3px; display:flex; align-items:center; background-color: rgb(255, 165, 0); width: 100%; justify-content: center;">
+  
   <br>
 
 
@@ -147,11 +146,12 @@
    </div>
    <div class="section-contact">
         <div class="contact">
-          <h1>let's Talk about your website design i want</h1>
+          <h1>let's Talk about your web ideas</h1>
+          <h3></h3>
         </div>
         <div class="images-con">
                <div class="contact-img">
-                  <img class="no-drag no-copy" alt="Protected Image" style="align-items: center;" src="Web Development Illustration.jpg" alt="">
+                  <img class="no-drag no-copy" alt="Protected Image" style="align-items: center;" src="desenvolvedor web 3D trabalhando na ilustração do projeto.jpg" alt="">
               </div>
         </div>
         
@@ -202,14 +202,7 @@ navLinks.forEach(link => {
 
   </script>
 
-  <script>
-  // Disable right-click on the whole page
-  document.addEventListener('contextmenu', function(e) {
-    e.preventDefault();
-  });
-</script>
-
-
+ 
 
 
   
