--- a/index.html
+++ b/index.html
@@ -117,10 +117,12 @@
              </div>
 
               <div data-aos="fade-right" class="about-text">
-               <h1>WHO I AM?</h1>
+                <div class="texting">
+                      <h1>WHO I AM?</h1>
                <div>
                    I am Jervin, a dedicated student with a strong passion for technology and web development. My goal is to become a successful web developer in the Philippines, creating websites and applications that are both useful and innovative. I am committed to learning and improving my skills so I can contribute to the growing tech industry in the country. With hard work and determination, I believe I can achieve my dreams and make a positive impact through web development.
               </div>
+                </div>
            </div>
       </div>
   </div>
