--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
          <div  data-aos="zoom-in" class="slogan">
             <div class="slogan-right">
                 <div class="slogan-text">
-                      <p class="motto">I <span>DESING</span> AND <span>DEVELOP</span> DIGITAL EXPERIENCES THAT SIMPLYFY LIFE.</p>
+                      <p class="motto">I <span>DESIGN</span> AND <span>DEVELOP</span> DIGITAL EXPERIENCES THAT SIMPLIFY LIFE.</p>
                 </div>
             </div>
         </div>
