--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Mark Jervin Villones</title>
  <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+ <link rel="icon" href="Gemini_Generated_Image_ua03ua03ua03ua03.png" style="background: transparent; opacity: 0;" type="image/svg+xml">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
@@ -66,13 +66,20 @@
               </div>
           </div>
           <div data-aos="fade-right" class="img-box">
-              <img class="no-drag no-copy" alt="Protected Image" src="02894799-f430-4655-8ee4-4df6c72f7f89.jpg" />
+            <div class="space">
+                  <img class="no-drag no-copy" alt="Protected Image" src="02894799-f430-4655-8ee4-4df6c72f7f89.jpg" />
                <div class="social-icons">
-                  <a href="https://www.facebook.com/villones.jervin"><i class="fab fa-facebook"></i></a>
+                 <div class="cons">
+                          <a href="https://www.facebook.com/villones.jervin"><i class="fab fa-facebook"></i></a>
                   <a href="https://www.instagram.com/villones_jervs/?hl=en"><i class="fab fa-instagram"></i></a>
                   <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
                   <a href="https://web.telegram.org/k/"><i class="fas fa-paper-plane"></i></a>
-               </div>
+                 </div>
+                  <div class="dw">
+                           <h5 class="dl" href="#">Download</h5>
+                  </div>
+               </div>           
+            </div>
           </div>
     </div>
     <div class="Jervin">
