--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Mark Jervin Villones</title>
  <link rel="stylesheet" href="style.css">
- <link rel="icon" href="Gemini_Generated_Image_ua03ua03ua03ua03.png" style="background: transparent; opacity: 0;" type="image/svg+xml">
+ <link rel="icon" href="" type="image/svg+xml">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
@@ -56,8 +56,7 @@
           <div data-aos="fade-left" class="text-box">
               <div class="name">
                   <div class="middle">Name:</div>
-                  <br>
-                  <div class="middle">Mark Jervin Villones</div>
+                  <div class="middle">Jervin Villones</div>
              </div>
               <div class="text">
                  <p>My name is Mark Jervin Villones, and I am a student at the University of Rizal System Binangonan (URSB). I am dedicated to pursuing my studies and achieving my academic goals. I am always eager to learn new things and improve myself both academically and personally.</p>
@@ -66,20 +65,18 @@
               </div>
           </div>
           <div data-aos="fade-right" class="img-box">
-            <div class="space">
-                  <img class="no-drag no-copy" alt="Protected Image" src="02894799-f430-4655-8ee4-4df6c72f7f89.jpg" />
+                  <img class="no-drag no-copy" alt="Protected Image" src="02894799-f430-4655-8ee4-4df6c72f7f89.jpg">
                <div class="social-icons">
-                 <div class="cons">
+                        <div class="cons">
                           <a href="https://www.facebook.com/villones.jervin"><i class="fab fa-facebook"></i></a>
-                  <a href="https://www.instagram.com/villones_jervs/?hl=en"><i class="fab fa-instagram"></i></a>
-                  <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
-                  <a href="https://web.telegram.org/k/"><i class="fas fa-paper-plane"></i></a>
-                 </div>
-                  <div class="dw">
-                           <h5 class="dl" href="#">Download</h5>
-                  </div>
+                          <a href="https://www.instagram.com/villones_jervs/?hl=en"><i class="fab fa-instagram"></i></a>
+                          <a href="https://www.youtube.com/"><i class="fab fa-github"></i></a>
+                          <a href="https://web.telegram.org/k/"><i class="fas fa-paper-plane"></i></a>
+                       </div>
+                       <div class="dw">
+                          <a class="dl" href="#">Download</a>
+                        </div>
                </div>           
-            </div>
           </div>
     </div>
     <div class="Jervin">
@@ -122,15 +119,18 @@
              <div data-aos="fade-left"  class="img-boxing">
                <img class="no-drag no-copy" alt="Protected Image" src="02894799-f430-4655-8ee4-4df6c72f7f89.jpg" alt="">
              </div>
-
               <div data-aos="fade-right" class="about-text">
                 <div class="texting">
-                      <h1>WHO I AM?</h1>
-               <div>
-                   I am Jervin, a dedicated student with a strong passion for technology and web development. My goal is to become a successful web developer in the Philippines, creating websites and applications that are both useful and innovative. I am committed to learning and improving my skills so I can contribute to the growing tech industry in the country. With hard work and determination, I believe I can achieve my dreams and make a positive impact through web development.
-              </div>
+                      <h1>Who i am?</h1>
+                     <div>
+                         I am Jervin, a dedicated student with a strong passion for technology and web development. With hard work and determination, I believe I can achieve my dreams and make a positive impact through web development.
+                     </div>
                 </div>
-           </div>
+                <div class="textingg">
+                      <h1>My goal</h1>
+                      <div>My goal is to become a successful web developer in the Philippines, creating websites and applications that are both useful and innovative. I am committed to learning and improving my skills so I can contribute to the growing tech industry in the country.</div>
+                </div>
+           </div>    
       </div>
   </div>
   
