--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                           <a href="https://web.telegram.org/k/"><i class="fas fa-paper-plane"></i></a>
                        </div>
                        <div class="dw">
-                          <a class="dl" href="#">Download</a>
+                          <a class="dl" href="#">Download    <a class="dl" href="#">Download  <i class="fa-solid fa-download"></i></a></a>
                         </div>
                </div>           
           </div>
